test: pruebas unitarias completas para useProductStore (CRUD local simulado)
- Se agregaron tests para las acciones principales del store:
  - addProduct: agrega un producto nuevo al estado global
  - editProduct: edita un producto existente basado en su ID
  - removeProduct: elimina un producto del array de estado
- Se usó Zustand directamente con getState() para acceder al store
- Todas las acciones asíncronas se envolvieron en act() de testing-library/react-native
- Se validaron los cambios en el estado con assertions claras por cada acción
- Se corrigieron errores por referencias indefinidas agregando productos antes de editar/eliminar
- El objetivo fue garantizar el comportamiento correcto del flujo local de productos simulando persistencia API

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,16 @@
       "@/*": [
         "./*"
       ]
-    }
+    },
+    "types": ["jest"],
+    "jsx": "react-native",
+    "module": "esnext",
+    "target": "esnext",
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-  ]
+, "jest.config.js"  ]
 }
